DIAC-1529 Fixing validation